objects/Customer_Journey_History__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Journey__c</fullName>
        <label>Customer Journey</label>
        <referenceTo>Customer_Journey__c</referenceTo>
        <relationshipLabel>Customer Journey History</relationshipLabel>
        <relationshipName>Customer_Journey_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration_min__c</fullName>
        <label>Duration (min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Customer Journey History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CJS-{0000}</displayFormat>
        <label>Customer Journey History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Journey History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>